
syntax = "proto3";
package proto;

option go_package = "github.com/veraison/services/proto";

import "evidence.proto";

message AppraisalContext {
	EvidenceContext evidence = 1;
	// This is a JSON-serialized form ear.AttestationResult which is not
	// defined as a protobuf message and so cannot be included directly.
	bytes result = 2;
}
